--- a/examples/QrCodeTest/QrCodeTest-Info.plist
+++ b/examples/QrCodeTest/QrCodeTest-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>com.scvngr.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.zxing.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
