Added qr code blackbox 2 tests

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -41,6 +41,9 @@
                <Test
                   Identifier = "AbstractBlackBoxTestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeBlackBox1TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
