Added QR code blackbox 3 tests

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -44,6 +44,9 @@
                <Test
                   Identifier = "QRCodeBlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeBlackBox2TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
