Added qrcode blackbox tests 4

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -47,6 +47,9 @@
                <Test
                   Identifier = "QRCodeBlackBox2TestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeBlackBox3TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
