--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -50,6 +50,9 @@
                <Test
                   Identifier = "QRCodeBlackBox3TestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeBlackBox4TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
