Aztec blackbox 1 passing

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -53,6 +53,9 @@
                <Test
                   Identifier = "QRCodeBlackBox4TestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeBlackBox5TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
