Datamatrix blackbox 1 tests

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -59,6 +59,9 @@
                <Test
                   Identifier = "AztecBlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "AztecBlackBox2TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
