Datamatrix blackbox 2 passing

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -62,6 +62,9 @@
                <Test
                   Identifier = "AztecBlackBox2TestCase">
                </Test>
+               <Test
+                  Identifier = "DataMatrixBlackBox1TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
