Partial blackbox tests

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -74,6 +74,9 @@
                <Test
                   Identifier = "FalsePositivesBlackBoxTestCase">
                </Test>
+               <Test
+                  Identifier = "FalsePositives2BlackBoxTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
