Unsupported blackbox tests

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -77,6 +77,9 @@
                <Test
                   Identifier = "FalsePositives2BlackBoxTestCase">
                </Test>
+               <Test
+                  Identifier = "PartialBlackBoxTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
