Code39 blackbox 3 test

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -83,6 +83,9 @@
                <Test
                   Identifier = "Code39BlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "QRCodeBlackBox1TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
