Code39 extended blackbox 2 test

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -86,6 +86,9 @@
                <Test
                   Identifier = "QRCodeBlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "Code39BlackBox3TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
