Code128 blackbox 2 test

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -95,6 +95,9 @@
                <Test
                   Identifier = "Code93BlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "Code128BlackBox1TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
