Code128 blackbox 3 test

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -98,6 +98,9 @@
                <Test
                   Identifier = "Code128BlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "Code128BlackBox2TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
