--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -101,6 +101,9 @@
                <Test
                   Identifier = "Code128BlackBox2TestCase">
                </Test>
+               <Test
+                  Identifier = "Code128BlackBox3TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
