RSS expanded blackbox 1 test

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -125,6 +125,9 @@
                <Test
                   Identifier = "ITFBlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "ITFBlackBox2TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
