RSS expanded blackbox 3 tests

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -131,6 +131,9 @@
                <Test
                   Identifier = "Code128BlackBox3TestCase">
                </Test>
+               <Test
+                  Identifier = "RSSExpandedBlackBox2TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
