PDF blackbox 2 test

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -161,6 +161,9 @@
                <Test
                   Identifier = "UPCABlackBox6BlurryTestCase">
                </Test>
+               <Test
+                  Identifier = "PDF417BlackBox1TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
