--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -164,6 +164,9 @@
                <Test
                   Identifier = "PDF417BlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "PDF417BlackBox2TestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
