--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -170,6 +170,9 @@
                <Test
                   Identifier = "AddressBookParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "CalendarParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
