--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -179,6 +179,9 @@
                <Test
                   Identifier = "ExpandedProductParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "ISBNParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
