--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -185,6 +185,9 @@
                <Test
                   Identifier = "GeoParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "ParsedReaderResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
