--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -188,6 +188,9 @@
                <Test
                   Identifier = "ParsedReaderResultTestCase">
                </Test>
+               <Test
+                  Identifier = "ProductParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
