--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -191,6 +191,9 @@
                <Test
                   Identifier = "ProductParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "SMSMMSParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
