--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -194,6 +194,9 @@
                <Test
                   Identifier = "SMSMMSParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "TelParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
