--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -197,6 +197,9 @@
                <Test
                   Identifier = "TelParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "URIParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
