--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -200,6 +200,9 @@
                <Test
                   Identifier = "URIParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "WifiParsedResultTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
