Added BitSourceBuilder and BitSourceTestCase

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -206,6 +206,9 @@
                <Test
                   Identifier = "QRCodeBlackBox1TestCase">
                </Test>
+               <Test
+                  Identifier = "BitMatrixTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
