--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -209,6 +209,9 @@
                <Test
                   Identifier = "BitMatrixTestCase">
                </Test>
+               <Test
+                  Identifier = "BitSourceTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
