--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -221,6 +221,9 @@
                <Test
                   Identifier = "WifiParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "ReedSolomonDecoderQRCodeTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
