--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -227,6 +227,9 @@
                <Test
                   Identifier = "ReedSolomonEncoderQRCodeTestCase">
                </Test>
+               <Test
+                  Identifier = "DecodedBitStreamParserTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
