--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -230,6 +230,9 @@
                <Test
                   Identifier = "DecodedBitStreamParserTestCase">
                </Test>
+               <Test
+                  Identifier = "EAN8WriterTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
