Added ExpandedInformationDecoderTest and RSSExpandedImage2binaryTestCase

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -242,6 +242,12 @@
                <Test
                   Identifier = "WifiParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "BitArrayBuilderTest">
+               </Test>
+               <Test
+                  Identifier = "ExpandedInformationDecoderTest">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
