--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -248,6 +248,9 @@
                <Test
                   Identifier = "ExpandedInformationDecoderTest">
                </Test>
+               <Test
+                  Identifier = "RSSExpandedImage2binaryTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
