Added AbstractDecoderTest and AI01_3103_DecoderTest

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -257,6 +257,12 @@
                <Test
                   Identifier = "RSSExpandedImage2stringTestCase">
                </Test>
+               <Test
+                  Identifier = "AbstractDecoderTest">
+               </Test>
+               <Test
+                  Identifier = "RSSExpandedInternalTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
