--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -263,6 +263,9 @@
                <Test
                   Identifier = "RSSExpandedInternalTestCase">
                </Test>
+               <Test
+                  Identifier = "AI01_3103_DecoderTest">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
