Added UPCEAN extension blackbox 1 test case

--- a/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
+++ b/ZXingObjC.xcodeproj/xcshareddata/xcschemes/ZXingObjC (iOS).xcscheme
@@ -278,6 +278,9 @@
                <Test
                   Identifier = "WifiParsedResultTestCase">
                </Test>
+               <Test
+                  Identifier = "UPCAWriterTestCase">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
